# cpong

./: .gitignore  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
src/: game.cpp  main.cpp
src/entities/: ball.cpp  cpu_paddle.cpp  paddle.cpp
src/include/: ball.h  constants.h  game.h  object.h  paddle.h
